--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "your medicine reminder apps",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "pg": "^8.5.1",
     "sequelize": "^6.5.0"
   },
